--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -6,6 +6,8 @@ on:
       - main
   pull_request:
     types: [opened, closed]
+  issues:
+    types: [opened, closed, reopened]
 
 jobs:
   notify:
